--- a/resources/styles.css
+++ b/resources/styles.css
@@ -8,8 +8,6 @@ body
     box-sizing: border-box;
 }
 
-
-
 /* Style the header */
 .header {
     background-color: #f1f1f1;
@@ -34,28 +32,33 @@ body
 }
 
 /* Change color on hover */
-.topnav a:hover {
+.topnav a:hover 
+{
     background-color: #ddd;
     color: black;
 }
 
 /* Create two equal columns that floats next to each other */
-.column {
+.column 
+{
     float: center;
     width: 50%;
     padding: 10px;
 }
 
 /* Clear floats after the columns */
-.row:after {
+.row:after 
+{
     content: "";
     display: table;
     clear: both;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media (max-width:600px) {
-    .column {
+@media (max-width:600px) 
+{
+    .column 
+    {
         width: 100%;
     }
 }
