--- a/CS460/HW2/resources/styles.css
+++ b/CS460/HW2/resources/styles.css
@@ -1,4 +1,14 @@
 body
 {
-    background-color: black;
+    background-color: black !important;
+}
+* 
+{
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+h1
+{
+    color: white !important;
 }
