Added JavaScript functions that validate form input and makes the necessary calculations

--- a/CS460/HW2/resources/styles.css
+++ b/CS460/HW2/resources/styles.css
@@ -12,3 +12,19 @@ h1
 {
     color: white !important;
 }
+
+/*JQuery styling*/
+.important 
+{
+    font-weight: bold;    
+}
+
+.blue 
+{    
+	background-color: cadetblue
+}
+
+.red
+{
+	background-color: #e0a0a0
+}
