Updated Home page and generic layout.

--- a/CS460/HW4/Homework4/Views/Home/Index.cshtml
+++ b/CS460/HW4/Homework4/Views/Home/Index.cshtml
@@ -3,29 +3,47 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Index Page</h1>    
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+<div>
+    <ul id="links">
+        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+        <li>@Html.ActionLink("About", "About", "Home")</li>
+        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+    </ul>
+    
+</div>
+
+<div id="divForm">
+    <form id="myForm">
+        <div class="form-group row">
+            <label for="value" class="col-sm-4 col-form-label">
+                Loan Amount:
+            </label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="loanAmount" placeholder="$">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="value" class="col-sm-4 col-form-label">
+                APR:
+            </label>
+            <div class="col-sm-4">
+                <input type="text" min="0" max="100" class="form-control" id="apr" placeholder="%">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="value" class="col-sm-4 col-form-label">
+                Loan Term:
+            </label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" id="loanTerm" placeholder="Number of Years">
+            </div>
+        </div>
+    </form>
+
+
 </div>
