--- a/CS460/HW4/Homework4/Views/Home/Index.cshtml
+++ b/CS460/HW4/Homework4/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Index Page</h1>    
+    <h1>Home Page</h1>    
 </div>
 
 <div>
@@ -15,35 +15,3 @@
     
 </div>
 
-<div id="divForm">
-    <form id="myForm">
-        <div class="form-group row">
-            <label for="value" class="col-sm-4 col-form-label">
-                Loan Amount:
-            </label>
-            <div class="col-sm-4">
-                <input type="text" class="form-control" id="loanAmount" placeholder="$">
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label for="value" class="col-sm-4 col-form-label">
-                APR:
-            </label>
-            <div class="col-sm-4">
-                <input type="text" min="0" max="100" class="form-control" id="apr" placeholder="%">
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label for="value" class="col-sm-4 col-form-label">
-                Loan Term:
-            </label>
-            <div class="col-sm-4">
-                <input type="text" class="form-control" id="loanTerm" placeholder="Number of Years">
-            </div>
-        </div>
-    </form>
-
-
-</div>
