--- a/CS460/HW4/Homework4/Views/Home/Index.cshtml
+++ b/CS460/HW4/Homework4/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
         <li>@Html.ActionLink("Home", "Index", "Home")</li>
         <li>@Html.ActionLink("About", "About", "Home")</li>
         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+        <li>@Html.ActionLink("Page1", "Page1", "Home")</li>
     </ul>
     
 </div>
