Added a second page, HomeController and index updated

--- a/CS460/HW4/Homework4/Views/Home/Index.cshtml
+++ b/CS460/HW4/Homework4/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
         <li>@Html.ActionLink("About", "About", "Home")</li>
         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
         <li>@Html.ActionLink("Page1", "Page1", "Home")</li>
+        <li>@Html.ActionLink("Page2", "Page2", "Home")</li>
     </ul>
     
 </div>
