--- a/CS460/HW4/Homework4/Views/Home/Page3.cshtml
+++ b/CS460/HW4/Homework4/Views/Home/Page3.cshtml
@@ -6,3 +6,38 @@
 
 <h2>Page3</h2>
 
+<form id="myForm">
+    <div class="form-group row">
+        <label for="value" class="col-sm-4 col-form-label">
+            Loan Amount:
+        </label>
+        <div class="col-sm-4">
+            <input type="text" class="form-control" id="loanAmount" placeholder="$">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="value" class="col-sm-4 col-form-label">
+            APR:
+        </label>
+        <div class="col-sm-4">
+            <input type="text" min="0" max="100" class="form-control" id="apr" placeholder="%">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label for="value" class="col-sm-4 col-form-label">
+            Loan Term:
+        </label>
+        <div class="col-sm-4">
+            <input type="text" class="form-control" id="loanTerm" placeholder="Number of Years">
+        </div>
+    </div>
+
+    <!-- Calculate button (submits the form input)  -->
+    <div class="form-group row">
+        <input type="submit" value="Submit" formmethod="post" />
+    </div>
+
+</form>
+
