--- a/CS460/HW4/Homework4/Views/Home/Page3.cshtml
+++ b/CS460/HW4/Homework4/Views/Home/Page3.cshtml
@@ -4,40 +4,43 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Page3</h2>
+<h2>Page 3</h2>
 
 <form id="myForm">
     <div class="form-group row">
-        <label for="value" class="col-sm-4 col-form-label">
+        <label for="value" class="col-sm-2 col-form-label">
             Loan Amount:
         </label>
         <div class="col-sm-4">
-            <input type="text" class="form-control" id="loanAmount" placeholder="$">
+            <input type="text" class="form-control" id="loanAmount" name="loanAmount" placeholder="$">
         </div>
     </div>
 
     <div class="form-group row">
-        <label for="value" class="col-sm-4 col-form-label">
+        <label for="value" class="col-sm-2 col-form-label">
             APR:
         </label>
         <div class="col-sm-4">
-            <input type="text" min="0" max="100" class="form-control" id="apr" placeholder="%">
+            <input type="text" min="0" max="100" class="form-control" id="apr" name="apr" placeholder="%">
         </div>
     </div>
 
     <div class="form-group row">
-        <label for="value" class="col-sm-4 col-form-label">
+        <label for="value" class="col-sm-2 col-form-label">
             Loan Term:
         </label>
         <div class="col-sm-4">
-            <input type="text" class="form-control" id="loanTerm" placeholder="Number of Years">
+            <input type="text" class="form-control" id="loanTerm" name="loanTerm" placeholder="Number of Years">
         </div>
     </div>
 
     <!-- Calculate button (submits the form input)  -->
     <div class="form-group row">
-        <input type="submit" value="Submit" formmethod="post" />
+        <input type="submit" value="Calculate" formmethod="post" />
+        <input type="reset" value="Reset" />
     </div>
 
 </form>
+
+<p> @ViewBag.response</p>
 
