Added XML comments to page 3 views

--- a/CS460/HW4/Homework4/Views/Home/Index.cshtml
+++ b/CS460/HW4/Homework4/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home: Homework 4";
 }
 
 <div class="jumbotron">
-    <h1>Home Page</h1>    
+    <h1>Home: Homework 4</h1>    
 </div>
 
 <div>
