--- a/CS460/HW4/Homework4/Views/Home/Page3_Result.cshtml
+++ b/CS460/HW4/Homework4/Views/Home/Page3_Result.cshtml
@@ -5,7 +5,8 @@
 }
 
 <h2>Page3 >> Loan Calculator Result </h2>
+<br />
 
-<p> @ViewBag.response</p>
+<p><b> @ViewBag.response</b></p>
 
-<p>@Html.ActionLink("Back to Page 3","Page3","Home")</p>
+<p>@Html.ActionLink("Back to Loan Calculator (Page 3)","Page3","Home")</p>
