--- a/CS460/HW4/Homework4/Views/Home/Page3.cshtml
+++ b/CS460/HW4/Homework4/Views/Home/Page3.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Page 3</h2>
+<h2>Page 3: Loan Calculator</h2>
 
 <form id="myForm">
     <div class="form-group row">
