--- a/CS460/HW4/Homework4/Views/Shared/_Layout.cshtml
+++ b/CS460/HW4/Homework4/Views/Shared/_Layout.cshtml
@@ -16,11 +16,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Assignment 4", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>                    
+                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@                    
                 </ul>
             </div>
         </div>
