--- a/CS460/HW4/Homework4/Views/Shared/_Layout.cshtml
+++ b/CS460/HW4/Homework4/Views/Shared/_Layout.cshtml
@@ -20,7 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@                    
+                    <li>@Html.ActionLink("Page 1", "Page1", "Home")</li>
+                    <li>@Html.ActionLink("Page 2", "Page2", "Home")</li>
+                    <li>@Html.ActionLink("Page 3", "Page3", "Home")</li>
                 </ul>
             </div>
         </div>
