--- a/CS460/HW4/Homework4/Views/Home/Page2.cshtml
+++ b/CS460/HW4/Homework4/Views/Home/Page2.cshtml
@@ -4,13 +4,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Page 2</h2>
+<h2>Page 2: Temperature Conversion (Post Method)</h2>
 
 <div>
 
     <form action="~/Home/Page2">
         <div class="form-group row">
-            <label for="value" class="col-sm-4 col-form-label">
+            <label for="value" class="col-sm-2 col-form-label">
                 Enter Temperature:
             </label>
             <div class="col-sm-4">
@@ -19,7 +19,7 @@
         </div>
 
         <div class="form-group row">
-            <label for="value" class="col-sm-4 col-form-label">
+            <label for="value" class="col-sm-2 col-form-label">
                 Temperature Unit:
             </label>
             <div class="col-sm-4">
@@ -36,6 +36,7 @@
 
 </div>
 
+@* The result is returned at the bottom of the page *@
 <p>
     @ViewBag.response
 </p>
