--- a/CS460/HW5/Homework5/Homework5/Views/Shared/_Layout.cshtml
+++ b/CS460/HW5/Homework5/Homework5/Views/Shared/_Layout.cshtml
@@ -17,10 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Address Change Form", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("View Requests", "Requests", "Home")</li>
                 </ul>
             </div>
         </div>
