Made some changes to home page appearance

--- a/CS460/HW5/Homework5/Homework5/Content/Site.css
+++ b/CS460/HW5/Homework5/Homework5/Content/Site.css
@@ -3,6 +3,7 @@
     padding-bottom: 20px;
 }
 
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
@@ -16,3 +17,28 @@ textarea {
     max-width: 280px;
 }
 
+.form-group-left{
+    width: 400px;
+    float: left;
+    position: relative;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.form-group-full{
+    width: 100%;
+}
+
+.form-group-full input{
+    max-width: 650px;
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
