JavaScript added, Homepage modified to show ajax results from Giphy

--- a/CS460/HW7/Homework7/Homework7/Content/Site.css
+++ b/CS460/HW7/Homework7/Homework7/Content/Site.css
@@ -22,3 +22,10 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.pictureFrame{
+    width: 250px;
+    height: 250px;
+    float: left;
+    margin: 5px;
+}
