--- a/CS460/HW7/Homework7/Homework7/Views/Home/Index.cshtml
+++ b/CS460/HW7/Homework7/Homework7/Views/Home/Index.cshtml
@@ -2,7 +2,20 @@
     ViewBag.Title = "Home";
 }
 
-<div class="jumbotron">
-    <h1>Homework 7</h1>    
+<div>
+    <h1>Search Gifs</h1>    
 </div>
 
+<input type="text" id="searchBox" class="form-control"/>
+<input id="searchButton" type="button" class="btn btn-primary" value="Search" />
+
+<div class="row">
+    <div id="outputBox" class="col-lg-12">
+
+    </div>
+</div>
+
+
+@section PageScripts{
+        <script src="~/Scripts/MyJavaScript.js"></script>
+}
