Added CRUD functionality

--- a/CS460/HW8/Homework8/Homework8/Views/Shared/_Layout.cshtml
+++ b/CS460/HW8/Homework8/Homework8/Views/Shared/_Layout.cshtml
@@ -20,7 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>                    
+                    <li>@Html.ActionLink("Artists", "Index", "Artists")</li>  
+                    <li>@Html.ActionLink("Art Works", "Index", "ArtWorks")</li>
+                    <li>@Html.ActionLink("Classifications", "Index", "Classifications")</li>
                 </ul>
             </div>
         </div>
