--- a/CS460/HW8/Homework8/Homework8/Views/Shared/_Layout.cshtml
+++ b/CS460/HW8/Homework8/Homework8/Views/Shared/_Layout.cshtml
@@ -38,5 +38,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    @RenderSection("Javascript", required: false)
+    @RenderSection("CustomScripts", required: false)
 </body>
 </html>
