--- a/CS460/Final/Final/Final/Views/Home/Index.cshtml
+++ b/CS460/Final/Final/Final/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Welcome to  Reginald's Ancient Antiquities Auction House";
 }
+
+<div>
+    <h1>Welcome to  Reginald's Ancient Antiquities Auction House</h1>
+</div>
 
 
 
