second commit, app ItemsController added with corresponding view

--- a/CS460/Final/Final/Final/Views/Shared/_Layout.cshtml
+++ b/CS460/Final/Final/Final/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Link 1", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Items", "Index", "Items")</li>
                     <li>@Html.ActionLink("Link 2", "Index", "Home")</li>
                     <li>@Html.ActionLink("Link 3", "Index", "Home")</li>
                 </ul>
