Added more stuff

--- a/CS460/Final/Final/Final/Views/Shared/_Layout.cshtml
+++ b/CS460/Final/Final/Final/Views/Shared/_Layout.cshtml
@@ -21,8 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Items", "Index", "Items")</li>
-                    <li>@Html.ActionLink("Link 2", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Link 3", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Bids", "Index", "Bids")</li>
                 </ul>
             </div>
         </div>
