--- a/CS460/HW8/Homework8/Homework8/Views/Home/Index.cshtml
+++ b/CS460/HW8/Homework8/Homework8/Views/Home/Index.cshtml
@@ -1,8 +1,27 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<Homework8.Models.Genre>
+
+@{
+    ViewBag.Title = "Homepage for Art Works";
 }
 
-<div class="jumbotron">
-    <h1>Welcome</h1>    
+<div>
+    <h2>Welcome to Artworks!</h2>    
 </div>
+
+<div class="row">
+    <div class="text-center col-lg-12">
+        @foreach (var link in Model)
+        {
+            <input type="button" class="btn btn-default" value="@link.GenreName" onclick="retrieveGenre(@link.GenreID)" />           
+        }
+    </div>
+</div>
+<p>&nbsp;</p>
+<div class="row">
+    <div id="artworkOutput" class="text-center col-lg-12"></div>
+</div>
+
+@section scripts{
+    <script src="~/Scripts/myScript.js"></script>
+}
 
